{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 178,
  "lineage": "5b45308a-afb7-8987-84c2-656a3690b374",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:865414024460:loadbalancer/app/nodejs-app-lb-tf/50dd6db3f52b3bad",
            "arn_suffix": "app/nodejs-app-lb-tf/50dd6db3f52b3bad",
            "dns_name": "nodejs-app-lb-tf-2134112942.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:865414024460:loadbalancer/app/nodejs-app-lb-tf/50dd6db3f52b3bad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nodejs-app-lb-tf",
            "security_groups": [
              "sg-0736b3ffc74b84ad6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-48de1e63"
              },
              {
                "subnet_id": "subnet-a125b6c7"
              },
              {
                "subnet_id": "subnet-addb68e5"
              },
              {
                "subnet_id": "subnet-b43961ef"
              }
            ],
            "subnets": [
              "subnet-48de1e63",
              "subnet-a125b6c7",
              "subnet-addb68e5",
              "subnet-b43961ef"
            ],
            "vpc_id": "vpc-86ade1e0",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_default_subnet.default_subnet_d",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:subnet/subnet-addb68e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-addb68e5",
            "map_public_ip_on_launch": true,
            "owner_id": "865414024460",
            "vpc_id": "vpc-86ade1e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:subnet/subnet-a125b6c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-a125b6c7",
            "map_public_ip_on_launch": true,
            "owner_id": "865414024460",
            "vpc_id": "vpc-86ade1e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:subnet/subnet-b43961ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-b43961ef",
            "map_public_ip_on_launch": true,
            "owner_id": "865414024460",
            "vpc_id": "vpc-86ade1e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_d",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:subnet/subnet-48de1e63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-48de1e63",
            "map_public_ip_on_launch": true,
            "owner_id": "865414024460",
            "vpc_id": "vpc-86ade1e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:vpc/vpc-86ade1e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-fece2387",
            "default_route_table_id": "rtb-6a823f13",
            "default_security_group_id": "sg-0628a37b",
            "dhcp_options_id": "dopt-bf1f8ad9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-86ade1e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-6a823f13",
            "owner_id": "865414024460"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:865414024460:listener/app/nodejs-app-lb-tf/50dd6db3f52b3bad/d20686ba05c30416",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:865414024460:targetgroup/target-group/f9b2a5453a5cd91d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:865414024460:listener/app/nodejs-app-lb-tf/50dd6db3f52b3bad/d20686ba05c30416",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:865414024460:loadbalancer/app/nodejs-app-lb-tf/50dd6db3f52b3bad",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_default_subnet.default_subnet_d",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:865414024460:targetgroup/target-group/f9b2a5453a5cd91d",
            "arn_suffix": "targetgroup/target-group/f9b2a5453a5cd91d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:865414024460:targetgroup/target-group/f9b2a5453a5cd91d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-86ade1e0"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:security-group/sg-0736b3ffc74b84ad6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0736b3ffc74b84ad6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200621002013277300000001",
            "name_prefix": null,
            "owner_id": "865414024460",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-86ade1e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865414024460:security-group/sg-017aecd2ae8670a72",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017aecd2ae8670a72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0736b3ffc74b84ad6"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200621002017592900000003",
            "name_prefix": null,
            "owner_id": "865414024460",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-86ade1e0"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}